# Galois-Field-library

./:  Makefile  .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
scripts/: test.sh
src/: Galois_Field_256.c  Galois_Field_256.h  Galua_Field_256.c  Galua_Field_256.h
test/: Makefile  test_Galois_Field_256.c  test_Galua_Field_256.c
